--- a/templates/login.html
+++ b/templates/login.html
@@ -29,4 +29,6 @@
   <input type="submit" value="Login" />
 </form>
 
+<p><a href="{{ url_for('forgot_password') }}">Forgot your password?</a></p>
+
 {% endblock %}
